sas-core/main/default/objects/LIA_Claim__c/fields/Customer_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Claim_Type__c</fullName>
    <label>Customer Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Claim_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Baggage damaged</fullName>
            </value>
            <value>
                <fullName>Baggage delayed/lost</fullName>
            </value>
            <value>
                <fullName>Booking error</fullName>
            </value>
            <value>
                <fullName>Cabin environment</fullName>
            </value>
            <value>
                <fullName>Complaint about a refund</fullName>
            </value>
            <value>
                <fullName>Extra baggage</fullName>
            </value>
            <value>
                <fullName>Flight cancellation</fullName>
            </value>
            <value>
                <fullName>Flight delay</fullName>
            </value>
            <value>
                <fullName>Gate issues</fullName>
            </value>
            <value>
                <fullName>In-flight meal</fullName>
            </value>
            <value>
                <fullName>In-flight service</fullName>
            </value>
            <value>
                <fullName>Items missing from checked-in baggage</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Meals/Drinks</fullName>
            </value>
            <value>
                <fullName>Missed connection</fullName>
            </value>
            <value>
                <fullName>Personal injury</fullName>
            </value>
            <value>
                <fullName>Prepaid seat</fullName>
            </value>
            <value>
                <fullName>Special assistance</fullName>
            </value>
            <value>
                <fullName>Travel document control</fullName>
            </value>
            <value>
                <fullName>WiFi</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Involuntary Denied Boarding</fullName>
            </value>
            <value>
                <fullName>Involuntary Downgrading</fullName>
            </value>
            <value>
                <fullName>Voluntary Denied Boarding</fullName>
            </value>
            <value>
                <fullName>Voluntary Downgrading</fullName>
            </value>
            <value>
                <fullName>Denied boarding</fullName>
            </value>
            <value>
                <fullName>Downgrading</fullName>
            </value>
            <value>
                <fullName>Missed connection - compensation</fullName>
            </value>
            <value>
                <fullName>Missed connection - expenses</fullName>
            </value>
            <value>
                <fullName>Flight cancellation - compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>