sas-core/main/default/objects/LIA_Claim__c/fields/EU261_Handling_Status__c.field-meta.xml
<CustomField>
    <fullName>EU261_Handling_Status__c</fullName>
    <inlineHelpText>Result of the automatic EU261 automation evaluation. 
Please review email conversation before start handling the case.</inlineHelpText>
    <label>EU261 Handling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Eligible for compensation</fullName>
            </value>
            <value>
                <fullName>Ineligible for compensation</fullName>
            </value>
            <value>
                <fullName>Ineligible for compensation and expenses</fullName>
            </value>
            <value>
                <fullName>Ineligible for compensation but eligible for reimbursement</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Possibly eligible for compensation</fullName>
            </value>
            <value>
                <fullName>Unable to handle</fullName>
            </value>
            <value>
                <fullName>Unhandled</fullName>
                <default>true</default>
                <label>Unhandled</label>
            </value>
            <value>
                <fullName>Will not handle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>