sas-core/main/default/objects/LIA_Claim__c/fields/Latest_Time_Of_EU261_Automation__c.field-meta.xml
<CustomField>
    <fullName>Latest_Time_Of_EU261_Automation__c</fullName>
    <description>Last time the claim was processed by the EU261 automation.</description>
    <inlineHelpText>Last time the claim was processed by the EU261 automation.</inlineHelpText>
    <label>Latest_Time_Of_EU261_Automation</label>
    <type>DateTime</type>
</CustomField>