sas-core/main/default/objects/LIA_Claim__c/fields/Liability_PNR__c.field-meta.xml
<CustomField>
    <fullName>Liability_PNR__c</fullName>
    <description>PNR related to the Liability Claim</description>
    <label>PNR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>