sas-core/main/default/objects/LIA_Claim__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Settled in Customer Claim</fullName>
            </value>
            <value>
                <fullName>Partly</fullName>
            </value>
            <value>
                <fullName>Claim recalled</fullName>
            </value>
            <value>
                <fullName>Claim handed over to other NEB</fullName>
            </value>
            <value>
                <fullName>Claim rejected</fullName>
            </value>
            <value>
                <fullName>Default judgement</fullName>
            </value>
            <value>
                <fullName>No Infringement</fullName>
            </value>
            <value>
                <fullName>Infringement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>