sas-core/main/default/objects/LIA_Claim__c/fields/Samsonite_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Samsonite_Reference_Id__c</fullName>
    <label>Samsonite Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>