sas-core/main/default/objects/LIA_Claim__c/fields/Settlement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Reason__c</fullName>
    <label>Settlement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-litigation settlement list</fullName>
            </value>
            <value>
                <fullName>Wrongly handled by agent</fullName>
            </value>
            <value>
                <fullName>Tricky/gray zone/sensitive case</fullName>
            </value>
            <value>
                <fullName>Lack of time to handle</fullName>
            </value>
            <value>
                <fullName>Low amount/high legal cost</fullName>
            </value>
            <value>
                <fullName>Lack of evidence</fullName>
            </value>
            <value>
                <fullName>Incomplete data for investigation</fullName>
            </value>
            <value>
                <fullName>No case submitted from Pax</fullName>
            </value>
            <value>
                <fullName>No response from passenger – went to NEB</fullName>
            </value>
            <value>
                <fullName>Pax entitled to compensation</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>