sas-core/main/default/objects/LIA_Claim__c/recordTypes/CompensationCard.recordType-meta.xml
<RecordType>
    <fullName>CompensationCard</fullName>
    <active>true</active>
    <description>Record type for compensation cards.</description>
    <label>CompensationCard</label>
</RecordType>