sas-core/main/default/objects/LIA_Claim__c/recordTypes/CustomerClaim.recordType-meta.xml
<RecordType>
    <fullName>CustomerClaim</fullName>
    <active>true</active>
    <description>Record type to differentiate the customer claims</description>
    <label>CustomerClaim</label>
</RecordType>