sas-core/main/default/objects/LIA_Claim__c/recordTypes/EmergencyClaim.recordType-meta.xml
<RecordType>
    <fullName>EmergencyClaim</fullName>
    <active>true</active>
    <description>Record type to differentiate emergency claims</description>
    <label>EmergencyClaim</label>
</RecordType>